--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,10 +9,18 @@
 
   <body>
     <div id="popup" class="popup">
-      <button id="po1" class="popup-option po1">Opção 1</button>
-      <button id="po2" class="popup-option po2">Opção 2</button>
-      <button id="po3" class="popup-option po3">Opção 3</button>
+      <button id="po1" class="popup-option po1">Light</button>
+      <button id="po2" class="popup-option po2">Medium</button>
+      <button id="po3" class="popup-option po3">Dark</button>
     </div>
+
+    <!-- Pode apagar esse span :) -->
+    <span
+      style="font-size: 2rem; cursor: default; text-align: center; color: #34CB79"
+    >
+      Clique com o botão direito para testar :)
+    </span>
+    <!-- Pode apagar esse span :) -->
 
     <script src="./index.js"></script>
   </body>
